v0.1.6 Fri May  4 12:37:33 EDT 2007
- fixed bad record length test
- removed MARC::XMLWriter convert_to_utf8 which wasn't really working and
  shouldn't be there if it isn't good
- added unescaping of entities to MARC::XMLReader

v0.1.5 Tue May  1 16:50:02 EDT 2007
- docfix in MARC::DataField (thanks Jason Ronallo)
- multiple docfixes (thanks Jonathan Rochkind)

v0.1.4 Tue Jan  2 15:45:53 EST 2007
- fixed bug in MARC::XMLWriter that was outputting all control field tags as 00z
  (thanks Ross Singer)
- added :include_namespace option to MARC::XMLWriter::encode to include the
  marcxml namespace, which allows MARC::Record::to_xml to emit the namespace 
  for a single record.

v0.1.3  Tue Jan  2 12:56:36 EST 2007
- added ability to map a MARC record to the Dublin Core fields.  Calling
  to_dublin_core on a MARC::Record returns a hash that has Dublin Core fields
  as the hash keys.

v0.1.2  Thu Dec 21 18:46:01 EST 2007
- fixed MARC::Record::to_xml so that it actually is tested and works (thanks 
  Ross Singer)

v0.1.1
- added ability to pass File like objects to the constructor for 
  MARC::XMLReader like MARC::Reader (thanks Jake Glenn)

v0.1.0  Wed Dec  6 15:40:40 EST 2006
- fixed pretty xml when stylesheet is used
- added value() to MARC::DataField
- added Rakefile for testing/building

v0.0.9  Tue Mar 28 10:02:16 CST 2006
- changed XMLWriter.write to output pretty-printed XML
- normalized Text in XML output
- added XMLWriter checks and replacements for bad subfield codes and indicator
  values
- added XMLWriter check and replacement for invalid control codes in xml data
  values
- added XMLWriter checks for values in the leader that are invalid MARCXML
- added bin/marc2xml
- collapsed tc_xmlreader.rb tc_xmlwriter.rb into tc_xml.rb for full write/read
  test.
- added :stylesheet argument to XLMWriter.new

v0.0.8  Mon Jan 16 22:31:00 EST 2006
- removed control tests out of tc_field.rb into tc_control.rb 
- fixed some formatting